--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-Copyright (C) 2012 The Android Open Source Project
-modified
-SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
--->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -13,80 +7,115 @@ SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_USER_DICTIONARY" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:label="@string/english_ime_name"
-            android:name="helium314.keyboard.latin.App"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:allowBackup="true"
-            android:defaultToDeviceProtectedStorage="true"
-            android:directBootAware="true"
-            tools:remove="android:appComponentFactory"
-            tools:targetApi="p">
+    <queries>
+
+        <!-- To detect other IMEs -->
+        <intent>
+
+            <!-- changed to * as it's supposed to help with finding other keyboard apps, see https://github.com/Helium314/AnaBoard/issues/1340 -->
+            <!-- <action android:name="android.view.InputMethod" /> -->
+            <action android:name="*" />
+        </intent>
+
+        <!-- To detect names of installed apps -->
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent>
+    </queries>
+
+    <application
+        android:name=".App"
+        android:allowBackup="true"
+        android:defaultToDeviceProtectedStorage="true"
+        android:directBootAware="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/english_ime_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        tools:remove="android:appComponentFactory"
+        tools:targetApi="p">
 
         <!-- Services -->
-        <service android:name="LatinIME"
-                android:label="@string/english_ime_name"
-                android:permission="android.permission.BIND_INPUT_METHOD"
-                android:directBootAware="true"
-                android:exported="true">
+        <service
+            android:name=".LatinIME"
+            android:directBootAware="true"
+            android:exported="true"
+            android:label="@string/english_ime_name"
+            android:permission="android.permission.BIND_INPUT_METHOD">
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
-            <meta-data android:name="android.view.im" android:resource="@xml/method_dummy" />
-        </service>
 
-        <service android:name=".spellcheck.AndroidSpellCheckerService"
-                 android:label="@string/spell_checker_service_name"
-                 android:permission="android.permission.BIND_TEXT_SERVICE"
-                 android:exported="true">
+            <meta-data
+                android:name="android.view.im"
+                android:resource="@xml/method_dummy" />
+        </service>
+        <service
+            android:name=".spellcheck.AndroidSpellCheckerService"
+            android:exported="true"
+            android:label="@string/spell_checker_service_name"
+            android:permission="android.permission.BIND_TEXT_SERVICE">
             <intent-filter>
                 <action android:name="android.service.textservice.SpellCheckerService" />
             </intent-filter>
-            <meta-data android:name="android.view.textservice.scs"
-                    android:resource="@xml/spellchecker" />
-        </service>
 
-        <!-- Activities -->
-        <activity android:name="helium314.keyboard.settings.SettingsActivity"
-                android:theme="@style/platformActivityTheme"
-                android:icon="@mipmap/ic_launcher"
-                android:windowSoftInputMode="adjustResize"
-                android:exported="true">
+            <meta-data
+                android:name="android.view.textservice.scs"
+                android:resource="@xml/spellchecker" />
+        </service> <!-- Activities -->
+        <activity
+            android:name="helium314.keyboard.LoginActivity"
+            android:exported="false"
+            android:theme="@style/LoginActivityTheme"/>
+        <activity
+            android:name="helium314.keyboard.settings.SettingsActivity"
+            android:exported="true"
+            android:icon="@mipmap/ic_launcher"
+            android:theme="@style/platformActivityTheme"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- separate activity that's used internally, only necessary in case the launcher icon is disabled on Android < 10 -->
-        <activity android:name="helium314.keyboard.settings.SettingsActivity2"
-            android:theme="@style/platformActivityTheme"
+        </activity> <!-- separate activity that's used internally, only necessary in case the launcher icon is disabled on Android < 10 -->
+        <activity
+            android:name="helium314.keyboard.settings.SettingsActivity2"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="true">
+            android:theme="@style/platformActivityTheme"
+            android:windowSoftInputMode="adjustResize">
+
             <!-- intent filter for opening .dict files -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:mimeType="application/octet-stream" android:scheme="content" android:host="*" android:pathPattern=".*\\.dict" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="application/octet-stream"
+                    android:pathPattern=".*\\.dict"
+                    android:scheme="content" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".spellcheck.SpellCheckerSettingsActivity"
-                android:theme="@style/platformActivityTheme"
-                android:label="@string/spell_checker_service_name"
-                android:exported="true">
+        <activity
+            android:name=".spellcheck.SpellCheckerSettingsActivity"
+            android:exported="true"
+            android:label="@string/spell_checker_service_name"
+            android:theme="@style/platformActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
-        </activity>
-
-        <!-- Broadcast receivers -->
-        <receiver android:name="SystemBroadcastReceiver"
-                android:exported="true">
+        </activity> <!-- Broadcast receivers -->
+        <receiver
+            android:name=".SystemBroadcastReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -94,27 +123,13 @@ SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
                 <action android:name="android.intent.action.LOCALE_CHANGED" />
             </intent-filter>
         </receiver>
-
-        <receiver android:name="DictionaryPackInstallBroadcastReceiver" android:exported="false">
+        <receiver
+            android:name=".DictionaryPackInstallBroadcastReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="helium314.keyboard.dictionarypack.aosp.UNKNOWN_CLIENT" />
             </intent-filter>
         </receiver>
-
     </application>
 
-    <queries>
-        <!-- To detect other IMEs -->
-        <intent>
-            <!-- changed to * as it's supposed to help with finding other keyboard apps, see https://github.com/Helium314/AnaBoard/issues/1340 -->
-            <!--<action android:name="android.view.InputMethod" />-->
-            <action android:name="*" />
-        </intent>
-
-        <!-- To detect names of installed apps -->
-        <intent>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent>
-    </queries>
 </manifest>
