--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity
             android:name="helium314.keyboard.LoginActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustResize|stateVisible"
             android:theme="@style/LoginActivityTheme"/>
         <activity
             android:name="helium314.keyboard.settings.SettingsActivity"
